lab1/Test/L1-A-8-5.output
Error Type B at Line 4
Error Type B at Line 8
Error Type B at Line 50
